--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,7 @@ hr{
   font-size: 24px;
   font-weight: bold;
   line-height: 36px;
+  padding-bottom: 10px;
   padding-left: 5px;
 }
 
@@ -266,4 +267,124 @@ header{
   text-align: center;
   background-color: #666666;
   color: white;
+}
+
+@media screen and (max-width: 980px) {
+
+  h1{
+    font-size: 42px;
+  }
+
+  h2{
+    font-size: 28px;
+  }
+
+  #img_bio{
+    display: block;
+    margin: 10px auto;
+    float: none;
+  }
+
+  .wrapper{
+    border-style: solid;
+    border-width: 2px;
+    border-color: green;
+    width: 100%;
+    margin: 0 auto;
+  }
+
+  #name{
+    padding-top: 8px;
+    margin-left: 5%
+  }
+
+  #content{
+    width: 50%;
+    margin-left: 5%;
+    margin-right: 2.5%;
+  }
+
+  #aside{
+    width: 30%;
+    float: left;
+    margin-left: 5%;
+    margin-right: 2.5%;
+  }
+
+  #project1{
+    margin: 20px auto;
+    float: none;
+  }
+
+  #project2{
+    margin: 20px auto;
+    float: none;
+  }
+
+  #project3{
+    margin: 20px auto;
+    float: none;
+  }
+
+  #project4{
+    margin: 20px auto;
+    float: none;
+  }
+
+  #project5{
+    margin: 20px auto;
+    float: none;
+  }
+
+  input{
+    width: 80%;
+  }
+
+  #footer{
+    position: static;
+    width: 100%;
+    float: left;
+    margin: 20px auto;
+  }
+
+}
+
+@media screen and (max-width: 768px) {
+
+  .wrapper{
+    border-style: solid;
+    border-width: 2px;
+    border-color: red;
+    width: 100%;
+  }
+
+  #content{
+    width: 50%;
+  }
+
+  #aside{
+    width: 30%;
+    float: left;
+  }
+
+}
+
+@media screen and (max-width: 640px) {
+
+  .wrapper{
+    border-style: solid;
+    border-width: 2px;
+    border-color: blue;
+    width: 100%;
+  }
+
+  #content{
+    width: 50%;
+  }
+
+  #aside{
+    width: 30%;
+    float: left;
+  }
+
 }
