--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -351,20 +351,96 @@ header{
 
 @media screen and (max-width: 768px) {
 
+  body{
+    font-size: 16px;
+  }
+  
+  h1{
+    font-size: 36px;
+  }
+
+  h2{
+    font-size: 24px;
+  }
+
+  #img_bio{
+    display: block;
+    margin-right: 10px;
+    float: left;
+  }
+
   .wrapper{
     border-style: solid;
     border-width: 2px;
     border-color: red;
     width: 100%;
+    margin: 0 auto;
+  }
+
+  #name{
+    width: 320px;
+    padding-top: 8px;
+    padding-bottom: 7px;
+    margin-left: 5%
   }
 
   #content{
-    width: 50%;
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
   }
 
   #aside{
-    width: 30%;
+    width: 90%;
+    margin-top: 20px;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+
+  #project1{
+    height: 180px;
+    width: 240px;
+    margin: 20px 20px 0px 20px;
     float: left;
+  }
+
+  #project2{
+    height: 180px;
+    width: 240px;
+    margin: 20px 20px 0px 20px;
+    float: left;
+  }
+
+  #project3{
+    height: 180px;
+    width: 240px;
+    margin: 20px 20px 0px 20px;
+    float: left;
+  }
+
+  #project4{
+    height: 180px;
+    width: 240px;
+    margin: 20px 20px 0px 20px;
+    float: left;
+  }
+
+  #project5{
+    height: 180px;
+    width: 240px;
+    margin: 20px 20px 0px 20px;
+    float: left;
+  }
+
+  input{
+    width: 90%;
+  }
+
+  #footer{
+    position: static;
+    width: 100%;
+    float: left;
+    margin: 20px auto;
   }
 
 }
